--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vincent Davalos</title>
     <link rel="stylesheet" href="./style.css" />
+    <script src="https://kit.fontawesome.com/c8e4d183c2.js" crossorigin="anonymous"></script>
   </head>
+
   <body>
     <section id="about me">
       <nav>
@@ -14,26 +16,48 @@
         <ul class="nav__link--list">
           <li>
             <a
-              href="" class="
-              nav__link--anchor
-                link__hover-effect
-                 link__hover-effect--black">Languages</a>
+              href=""
+              class="nav__link--anchor link__hover-effect link__hover-effect--black"
+              >Languages</a
+            >
           </li>
           <li>
             <a
-              href="" class="
-              nav__link--anchor
-               link__hover-effect
-                link__hover-effect--black">Projects</a>
+              href=""
+              class="nav__link--anchor link__hover-effect link__hover-effect--black"
+              >Projects</a
+            >
           </li>
           <li>
-            <a
-              href="" class="
-              nav__link--anchor
-               nav__link--anchor-primary">Contact</a>
+            <a href="" class="nav__link--anchor nav__link--anchor-primary"
+              >Contact</a
+            >
           </li>
         </ul>
       </nav>
+
+      <div class="flex flex-1">
+        <div class="about-me__info row">
+          <div class="about-me__info--container">
+            <figure class="about-me__picture--mask">
+              <img src="./assets/0.jpg" class="about-me__picture" alt="Picture of me" />
+            </figure>
+            <h1 class="about-me__info--title">
+              Hey! I'm <span class="text--purple">Vincent Davalos</span> 👋
+            </h1>
+            <p class="about-me__info--para">
+                 Lorem <strong class="text--purple">ipsum dolor sit</strong> amet consectetur adipisicing elit. Tenetur
+              sint magnam tempora animi asperiores quaerat ullam aliquid hic Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere, a.
+            </p>
+            <div class="about-me__links">
+                <a href="" class="about-me__link"></a>
+                <a href="" class="about-me__link"></a>
+                <a href="" class="about-me__link"></a>
+                <a href="" class="about-me__link"></a>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
   </body>
 </html>
