--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vincent Davalos</title>
     <link rel="stylesheet" href="./style.css" />
-    <script src="https://kit.fontawesome.com/c8e4d183c2.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/95c64f95e8.js" crossorigin="anonymous"></script>
   </head>
 
   <body>
@@ -46,16 +46,27 @@
               Hey! I'm <span class="text--purple">Vincent Davalos</span> 👋
             </h1>
             <p class="about-me__info--para">
-                 Lorem <strong class="text--purple">ipsum dolor sit</strong> amet consectetur adipisicing elit. Tenetur
+             Lorem <strong class="text--purple">ipsum dolor sit</strong> amet consectetur adipisicing elit. Tenetur
               sint magnam tempora animi asperiores quaerat ullam aliquid hic Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere, a.
             </p>
             <div class="about-me__links">
-                <a href="" class="about-me__link"></a>
-                <a href="" class="about-me__link"></a>
-                <a href="" class="about-me__link"></a>
-                <a href="" class="about-me__link"></a>
+                <a href="" class="about-me__link">
+                    <i class="fa-brands fa-linkedin-in"></i>
+                </a>
+                <a href="" class="about-me__link">
+                    <i class="fa-brands fa-github"></i>
+                </a>
+                <a href="" class="about-me__link">
+                    <i class="fa-solid fa-envelope"></i>
+                </a>
+                <a href="" class="about-me__link">
+                    <i class="fas fa-file-pdf"></i>
+                </a>
             </div>
           </div>
+          <figure class="about-me__img--container">
+            <img src="./assets/undraw_websites.svg" class="about-me__img" alt="">
+          </figure>
         </div>
       </div>
     </section>
