--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vincent Davalos</title>
     <link rel="stylesheet" href="./style.css" />
-    <script src="https://kit.fontawesome.com/95c64f95e8.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/95c64f95e8.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
 
   <body>
@@ -40,33 +43,93 @@
         <div class="about-me__info row">
           <div class="about-me__info--container">
             <figure class="about-me__picture--mask">
-              <img src="./assets/0.jpg" class="about-me__picture" alt="Picture of me" />
+              <img
+                src="./assets/0.jpg"
+                class="about-me__picture"
+                alt="Picture of me"
+              />
             </figure>
             <h1 class="about-me__info--title">
               Hey! I'm <span class="text--purple">Vincent Davalos</span> 👋
             </h1>
             <p class="about-me__info--para">
-             Lorem <strong class="text--purple">ipsum dolor sit</strong> amet consectetur adipisicing elit. Tenetur
-              sint magnam tempora animi asperiores quaerat ullam aliquid hic Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere, a.
+              Lorem <strong class="text--purple">ipsum dolor sit</strong> amet
+              consectetur adipisicing elit. Tenetur sint magnam tempora animi
+              asperiores quaerat ullam aliquid hic Lorem ipsum dolor sit amet,
+              consectetur adipisicing elit. Facere, a.
             </p>
             <div class="about-me__links">
-                <a href="" class="about-me__link">
-                    <i class="fa-brands fa-linkedin-in"></i>
-                </a>
-                <a href="" class="about-me__link">
-                    <i class="fa-brands fa-github"></i>
-                </a>
-                <a href="" class="about-me__link">
-                    <i class="fa-solid fa-envelope"></i>
-                </a>
-                <a href="" class="about-me__link">
-                    <i class="fas fa-file-pdf"></i>
-                </a>
+              <a href="" class="about-me__link">
+                <i class="fa-brands fa-linkedin-in"></i>
+              </a>
+              <a href="" class="about-me__link">
+                <i class="fa-brands fa-github"></i>
+              </a>
+              <a href="" class="about-me__link">
+                <i class="fa-solid fa-envelope"></i>
+              </a>
+              <a href="" class="about-me__link">
+                <i class="fas fa-file-pdf"></i>
+              </a>
             </div>
           </div>
           <figure class="about-me__img--container">
-            <img src="./assets/undraw_websites.svg" class="about-me__img" alt="">
+            <img
+              src="./assets/undraw_websites.svg"
+              class="about-me__img"
+              alt=""
+            />
           </figure>
+        </div>
+      </div>
+    </section>
+
+    <section id="languages">
+      <div class="container">
+        <div class="row">
+          <h1 class="section__title">This is my <span class="text--purple">technology stack</span></h1>
+          <div class="language__list">
+            <div class="language">
+              <figure class="language__img--wrapper">
+                <img
+                  src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/38/HTML5_Badge.svg/240px-HTML5_Badge.svg.png"
+                  alt="HTML logo"
+                  class="language__img"
+                />
+              </figure>
+              <span class="language__name">HTML</span>
+            </div>
+            <div class="language">
+              <figure class="language__img--wrapper">
+                <img
+                  src="https://cdn.iconscout.com/icon/free/png-256/css-131-722685.png"
+                  alt="CSS logo"
+                  class="language__img"
+                />
+              </figure>
+              <span class="language__name">CSS</span>
+            </div>
+            <div class="language">
+              <figure class="language__img--wrapper">
+                <img
+                  src="https://cdn.iconscout.com/icon/free/png-256/javascript-1-225993.png"
+                  alt="JavaScript logo"
+                  class="language__img"
+                />
+              </figure>
+              <span class="language__name">JavaScript</span>
+            </div>
+            <div class="language">
+              <figure class="language__img--wrapper">
+                <img
+                  src="https://cdn.iconscout.com/icon/free/png-256/react-3-1175109.png"
+                  alt="React logo"
+                  class="language__img"
+                />
+              </figure>
+              <span class="language__name">React</span>
+            </div>
+          </div>
         </div>
       </div>
     </section>
