--- a/index.html
+++ b/index.html
@@ -17,22 +17,22 @@
       <nav>
         <div class="personal__logo">Vincent Davalos</div>
         <ul class="nav__link--list">
-          <li>
+          <li class="nav__link">
             <a
-              href=""
+              href="#languages"
               class="nav__link--anchor link__hover-effect link__hover-effect--black"
               >Languages</a
             >
           </li>
-          <li>
+          <li class="nav__link">
             <a
-              href=""
+              href="#projects"
               class="nav__link--anchor link__hover-effect link__hover-effect--black"
               >Projects</a
             >
           </li>
-          <li>
-            <a href="" class="nav__link--anchor nav__link--anchor-primary"
+          <li class="nav__link">
+            <a href="mailto:youremail" class="nav__link--anchor nav__link--anchor-primary"
               >Contact</a
             >
           </li>
@@ -50,7 +50,7 @@
               />
             </figure>
             <h1 class="about-me__info--title">
-              Hey! I'm <span class="text--purple">Vincent Davalos</span> 👋
+              Hey! I'm <span class="text--purple">Vincent Davalos</span>&nbsp;<span class="wave">👋</span>
             </h1>
             <p class="about-me__info--para">
               Lorem <strong class="text--purple">ipsum dolor sit</strong> amet
@@ -68,7 +68,7 @@
               <a href="" class="about-me__link">
                 <i class="fa-solid fa-envelope"></i>
               </a>
-              <a href="" class="about-me__link">
+              <a href="./assets/Example Resume.pdf" target="_blank" class="about-me__link">
                 <i class="fas fa-file-pdf"></i>
               </a>
             </div>
@@ -87,7 +87,9 @@
     <section id="languages">
       <div class="container">
         <div class="row">
-          <h1 class="section__title">This is my <span class="text--purple">technology stack</span></h1>
+          <h1 class="section__title">
+            This is my <span class="text--purple">technology stack</span>
+          </h1>
           <div class="language__list">
             <div class="language">
               <figure class="language__img--wrapper">
@@ -133,5 +135,144 @@
         </div>
       </div>
     </section>
+
+    <section id="projects">
+      <div class="container">
+        <div class="row">
+          <h1 class="section__title">
+            Here are some of my <span class="text--purple">projects</span>
+          </h1>
+          <ul class="project__list">
+            <li class="project">
+              <div class="project__wrapper">
+                <img
+                  src="./assets/loopit.png"
+                  class="project__img"
+                  alt="Example of a project"
+                />
+                <div class="project__description">
+                  <h3 class="project__description--title">
+                    Car project example
+                  </h3>
+                  <h4 class="project__description--sub-title">
+                    Html, CSS, JavaScript, Vue, Vuex
+                  </h4>
+                  <p class="project__description--para">
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                    Cupiditate totam sunt, atque harum voluptatibus mollitia
+                    numquam tempore dolor earum in.
+                  </p>
+                  <div class="project__description--links">
+                    <a href="https://www.github.com/yourlink" target="_blank" class="project__description--link">
+                        <i class="fab fa-github"></i>
+                    </a>
+                    <a href="htpps://www.yourwebsite.com" class="project__description--link">
+                        <i class="fas fa-link"></i>
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </li>
+            <li class="project">
+              <div class="project__wrapper">
+                <img
+                  src="./assets/loopit.png"
+                  class="project__img"
+                  alt="Example of a project"
+                />
+                <div class="project__description">
+                  <h3 class="project__description--title">
+                    Car project example
+                  </h3>
+                  <h4 class="project__description--sub-title">
+                    Html, CSS, JavaScript, Vue, Vuex
+                  </h4>
+                  <p class="project__description--para">
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                    Cupiditate totam sunt, atque harum voluptatibus mollitia
+                    numquam tempore dolor earum in.
+                  </p>
+                  <div class="project__description--links">
+                    <a href="https://www.github.com/yourlink" target="_blank" class="project__description--link">
+                        <i class="fab fa-github"></i>
+                    </a>
+                    <a href="htpps://www.yourwebsite.com" class="project__description--link">
+                        <i class="fas fa-link"></i>
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </li>
+            <li class="project">
+              <div class="project__wrapper">
+                <img
+                  src="./assets/loopit.png"
+                  class="project__img"
+                  alt="Example of a project"
+                />
+                <div class="project__description">
+                  <h3 class="project__description--title">
+                    Car project example
+                  </h3>
+                  <h4 class="project__description--sub-title">
+                    Html, CSS, JavaScript, Vue, Vuex
+                  </h4>
+                  <p class="project__description--para">
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                    Cupiditate totam sunt, atque harum voluptatibus mollitia
+                    numquam tempore dolor earum in.
+                  </p>
+                  <div class="project__description--links">
+                    <a href="htpps://www.github.com/yourlink" target="_blank" class="project__description--link">
+                        <i class="fab fa-github"></i>
+                    </a>
+                    <a href="https://www.yourwebsite.com" class="project__description--link">
+                        <i class="fas fa-link"></i>
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </section>
+
+    <footer>
+        <div class="row footer__row">
+            <a href="#" class="footer__anchor">
+                <figure class="footer_logo">
+                    <img src="./assets/logo.svg" class="footer__logo--img" alt="">
+                </figure>
+                <span class="footer__logo--popper">
+                    Top
+                    <i class="fas fa-arrow-up"></i>
+                </span>
+            </a>
+            <div class="footer__social--list">
+                <a href="https://google.com" class="
+                footer__social--link
+                link__hover-effect
+                link__hover-effect--white
+                " target="_blank">GitHub</a>
+                <a href="https://google.com" class="
+                footer__social--link
+                link__hover-effect
+                ;ink__hover-effect--white
+                " target="_blank">LinkIn</a>
+                <a href="mailto:youremail" class="
+                footer__social--link
+                link__hover-effect
+                ;ink__hover-effect--white
+                " target="_blank">Email</a>
+                <a href="./assets/Example Resume.pdf" class="
+                footer__social--link
+                link__hover-effect
+                ;ink__hover-effect--white
+                " target="_blank" >Resume</a>
+            </div>
+            <div class="footer__copyright">Copyright © 2022 Vincent Davalos</div>
+        </div>
+    </footer>
   </body>
 </html>
